[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pygantt"
version = "0.1.0"
description = "A command-line Python-based retro Gantt chart tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich"
]

[project.scripts]
pygantt = "pygantt.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]